src/App.css
body {
  background-color: var(--background);
  color: var(--text-color);
}

a {
  color: var(--text-link);
  font-size: var(--medium);
}

a[target="_blank"]::after {
  content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAQElEQVR42qXKwQkAIAxDUUdxtO6/RBQkQZvSi8I/pL4BoGw/XPkh4XigPmsUgh0626AjRsgxHTkUThsG2T/sIlzdTsp52kSS1wAAAABJRU5ErkJggg==);
  margin: 0 3px 0 5px;
}

a:visited {
  color: var(--secondary) * 20%;
}

h1 {
  color: var(--primary);
  font-size: var(--xx-large);
  font-family: 'Permanent Marker', cursive;
}

h2 {
  color: var(--primary);
  font-size: var(--x-large);
  font-family: 'Permanent Marker', cursive;
}

h3 {
  color: var(--primary);
  font-size: var(--large);
  font-family: 'Permanent Marker', cursive;
}

.site-content {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 var(--medium);
}

.site-header {
  background-image: linear-gradient(to right, var(--secondary) 25%, var(--tertiary) 100%);
  color: var(--inverse-text-color);
  padding: var(--small) var(--large) var(--xxx-small);
  margin: -1rem -1rem var(--small);
  display: flex;
}

.site-header__logo {
  max-height: 32px;
}

.site-header nav {
  text-align: right;
  flex-grow: 5;
  margin-top: .4rem;
}

.site-header a {
  border-bottom: 2px solid transparent;
  margin: 0 .5rem;
  font-weight: 500;
  padding-bottom: .4rem;
  text-decoration: none;
}

.site-header a:hover,
.site-header a:focus {
  border-bottom-color: var(--secondary);
}

a.site-header__logo-link:hover {
  border-bottom-color: var(--tertiary);
}

.overview {
  display: flex;
  flex-direction: column;
}

@media screen and (min-width: 47rem) {
  .overview {
    flex-direction: row;
  }
  .overview__intro {
    flex-grow: 2;
    width: 67%;
  }

  .overview__toc {
    width: 33%;
  }
}

.stages {
  margin-bottom: -.9rem;
}

.projects {
  position: relative;
}

@media screen and (min-width: 27rem) {
.projects:before {
  content: ">";
  position: absolute;
  font-family: 'Signika Negative', sans-serif;
  color: var(--primary);
  text-align: left;
  line-height: 1.3em;
  font-size: 2em;
  width: 100%;
  margin-top: 1.25rem;
  padding-left: 20rem;
}
}

@media screen and (min-width: 32rem) {
  .projects:before {
    content: ">\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0>";
  }
}

@media screen and (min-width: 36rem) {
  .projects:before {
    content: ">\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0>\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0>";
  }
}

@media screen and (min-width: 55rem) {
  .projects:before {
    content: ">\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0>\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0>";
    position: absolute;
    font-family: 'Signika Negative', sans-serif;
    color: var(--primary);
    text-align: center;
    line-height: 1.3em;
    font-size: 2em;
    width: 100%;
    margin-top: 1.35rem;
    padding-left: 0;
  }
}

.project-overview {
  border-image: linear-gradient(to right, var(--secondary) 0%, var(--tertiary) 100%);
  border-image-slice: 1;
  border-top: 2px solid;
  border-right: 4px solid;
  border-bottom: 2px solid;
  margin: 0;
  padding: 1.5rem;
  width: 100%;
}

.project-overview:before {
  content: attr(data-time);
  position: absolute;
  border-radius: 50%;
  font-family: 'Signika Negative', sans-serif;
  padding: 15px;
  height: 2.5em;
  width: 2.5em;
  background-color: var(--primary);
  text-align: center;
  line-height: 1.3em;
  color: white;
  font-size: 1em;
  margin-top: 8rem;
  vertical-align: baseline;
}

.project-overview:nth-of-type(odd):before {
  left: 100%;
  margin-left: -2.25em;
}

.project-overview:nth-of-type(even):before {
  right: 100%;
  margin-right: -2.25em;
}

.project-overview:after {
  content: "<\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0<\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0<";
  position: absolute;
  font-family: 'Signika Negative', sans-serif;
  color: var(--primary);
  text-align: center;
  line-height: 1.3em;
  font-size: 2em;
  width: 100%;
  margin-top: .35rem;
}

.project-overview:nth-of-type(even):after {
  content: ">\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0>\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0>";
}

.project-overview:nth-last-of-type(1):after {
  content: "";
}

.project-overview:nth-of-type(even) {
  border-top-width: 2px;
  border-left: 3px solid var(--primary);
  border-right: 0;
}

.project-overview:nth-of-type(1) {
  border-top-width: 4px;
}

.project-overview:nth-last-of-type(1) {
  border-bottom-width: 0;
}

.project-overview__name {
  margin: 0 0 1rem 0;
}

.project-overview__body-wrap {
  display: flex;
  flex-direction: column;
}

@media screen and (min-width: 36rem) {
  .project-overview__body-wrap {
    flex-direction: row;
  }
  .project-overview:nth-child(even) .project-overview__body-wrap {
    flex-direction: row-reverse
  }
}

.project-overview__button {
  background-color: var(--secondary);
  border: 1px solid var(--secondary);
  border-radius: 5px;
  color: var(--background);
  display: inline-block;
  font-weight: 600;
  margin-bottom: 2.5rem;
  padding: .5em 1em;
  text-decoration: none;
  width: auto;
}

.project-overview__button:active,
.project-overview__button:focus,
.project-overview__button:hover,
.project-overview__button:visited {
  background-color: var(--tertiary);
  border-color: var(--tertiary);
  color: var(--inverse-text-color);
}

.project-overview__image-box {
  flex-grow: 2;
}

.project-overview__description {
  position: relative;
}

@media screen and (min-width: 36rem) {
  .project-overview__description {
    margin-top: 0;
    margin-left: 1rem;
    max-width: 33%;
  }
  .project-overview:nth-child(even) .project-overview__description {
    margin-left: 0;
    margin-right: 1rem;
  }

  .project-overview__text {
    margin-top: 0;
  }

  .project-overview__text h3 {
    margin-top: 0;
  }
}

.project-overview__image-box {
  position: relative;
}

.project-overview__image-box a[target="_blank"]::after {
  position: absolute;
  margin: 0.5rem 0 0 -2.5rem;
  background-color: white;
  padding: .5rem .75rem;
  border-radius: 5px;
}

.image-box__img {
  width: 100%;
  height: auto;
}

.jump-to-top {
  position: absolute;
  right: 0;
  bottom: 0;
}

@media screen and (min-width: 36rem) {
  .project-overview:nth-child(even) .jump-to-top {
    left: 0;
  }
}

.site-footer {
  background-image: linear-gradient(to right, var(--secondary) 25%, var(--tertiary) 100%);
  color: var(--inverse-text-color);
  margin: 0 -1rem -1rem;
  padding: 1rem;
  text-align: center;
}

.site-footer a {
  color: var(--inverse-text-color);
}

